--- a/config/templates/default/index.erb
+++ b/config/templates/default/index.erb
@@ -2,17 +2,17 @@
 
 <body>
 
-<h1>HOSTNAME   : <% @host_name %></h1>
+<h1>HOSTNAME   : <%= @host_name %></h1>
 
-<h2>TIME       : <% @time %></h2>
+<h2>TIME       : <%= @time %></h2>
 
-<h3>AZ         : <% @az %></h3>
+<h3>AZ         : <%= @az %></h3>
 
-<h3>IP         : <% @ip %></h3>
+<h3>IP         : <%= @ip %></h3>
 
-<h3>ID         : <% @id %></h3>
+<h3>ID         : <%= @id %></h3>
 
-<h3>INSTANCE_ID: <% @instance_id  %></h3>
+<h3>INSTANCE_ID: <%= @instance_id  %></h3>
 
 </body>
 
